Mantis

To Do:

 * Inspect security
 * Inspect for unsafe input/output (mostly done)
 * Add mailing module
 * Add ip tracking/banning capability
 * Add file upload module
 * Add postgreSQL support and/or a Database abstraction layer (PHPLib)
 * Refine viewing news archives
 * Make priority useful
 * Force some sort of dialog when closing a bug
 * Force some sort of dialog when reopening a bug
 * Search bugs capability
 * Complex bug criteria searching
 * Add glyphs and icons as optional display feature
 * More documentation on installtion, configuration, and customization
 * Further document core_API.php
 * Multiple project support with userland partitioning
 * Move as much of the config_inc.php varaibles into a database table.
   Then build a nice interface into it.

12.12.2000	-	0.11.0

 * Profiles can be used for advanced bug submission
 * Added summary by date
 * Added priority on the summary page
 * Added profile management
 * Added a confirmation before an admin can delete an account
 * Added several ; in core_API.php that caused errors on some servers
 * Added view next/prev XYZ bugs on bug viewing page
 * Added a string_display() function to prevent HTML tags from screwing up display
 * Added version editing capability
 * Added account preferences
 * Added changed in last X hours option
 * Added show source debug capability - requires PHP4
 * Added 'feedback' status - indicates that it requires more information
 * Added show Mantis version capability
 * Added string_display_with_br() for displaying text with line breaks
 * Added userland documentation (documentation.html)
 * Added $g_usage_doc_page for userland documentation
 * Added Docs to the menu
 * Fixed bug with Bugnote Add button showing up in the wrong places
 * Fixed bug with SQL queries updating both submitted and last updated dates on bugs
 * Fixed bug with SQL queries updating both submitted and last access dates on users
 * Modified version to be an enum.